# caide-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml
bindings/python/: README.md  pyproject.toml
bindings/python/caide_core/: __init__.py  _ffi.py
bindings/python/tests/: test_smoke.py
cmake/: CaideCoreConfig.cmake.in  CompilerWarnings.cmake  Platform.cmake
include/caide_core/: caide_core.h
src/: CMakeLists.txt  error.cpp  error.h  internal.h
src/abi/: abi_commands.cpp  abi_context.cpp  abi_export.cpp  abi_geometry.cpp  abi_printability.cpp
src/commands/: executor.cpp  executor.h  history.cpp  history.h
src/export/: mesh_export.cpp  mesh_export.h  tessellation.cpp
src/geometry/: advanced.cpp  advanced.h  booleans.cpp  booleans.h  features.cpp  features.h  primitives.cpp  primitives.h  sketch.cpp  sketch.h  transforms.cpp  transforms.h
src/printability/: analyzer.cpp  analyzer.h  support_estimator.cpp
src/references/: naming.cpp  naming.h
tests/: CMakeLists.txt  test_abi.c  test_advanced.cpp  test_booleans.cpp  test_commands.cpp  test_export.cpp  test_export_gltf.cpp  test_export_step.cpp  test_features.cpp  test_primitives.cpp  test_printability.cpp  test_references.cpp  test_sketch.cpp  test_transforms.cpp
tests/fuzz/: CMakeLists.txt  README.md  fuzz_command_executor.cpp  fuzz_history.cpp  standalone_main.inc
