function(caide_add_cpp_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE caide_core)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src ${CMAKE_CURRENT_SOURCE_DIR}/../include)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

caide_add_cpp_test(test_primitives test_primitives.cpp)
caide_add_cpp_test(test_booleans test_booleans.cpp)
caide_add_cpp_test(test_transforms test_transforms.cpp)
caide_add_cpp_test(test_features test_features.cpp)
caide_add_cpp_test(test_sketch test_sketch.cpp)
caide_add_cpp_test(test_advanced test_advanced.cpp)
caide_add_cpp_test(test_commands test_commands.cpp)
caide_add_cpp_test(test_export test_export.cpp)
caide_add_cpp_test(test_printability test_printability.cpp)
caide_add_cpp_test(test_references test_references.cpp)

add_executable(test_abi test_abi.c)
target_link_libraries(test_abi PRIVATE caide_core)
target_include_directories(test_abi PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
add_test(NAME test_abi COMMAND test_abi)
