[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "caide-core"
version = "0.1.0"
description = "Python ctypes bindings for libcaide_core (caide CAD kernel)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "caide contributors" }]
keywords = ["cad", "caide", "opencascade", "3d-printing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/WD-Mitchell/cAId"

[tool.setuptools.packages.find]
where = ["."]
include = ["caide_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
